# life-net

./: Cargo.toml  README.md
figment/: Cargo.toml
figment/src/: compute.rs  graphics.rs  lib.rs
figment/src/compute/: rate_limiter.rs  running_average.rs  timer.rs
figment/src/graphics/: quad.rs  rect.rs  sprite.rs  texture.rs  view.rs
figment/src/graphics/color/: mod.rs  monochrome.rs  rgb.rs  rgba.rs
figment/src/graphics/image/: grayscale.rs  rgb.rs  rgba.rs
life_net/: Cargo.toml
life_net/src/: main.rs
quadlife/: Cargo.toml
quadlife/src/: cell.rs  lib.rs  quad.rs
src/: actor.rs  compute.rs  engine.rs  graphics.rs  life.rs  main.rs  perf.rs  render.rs  simulation.rs
src/compute/: continuous.rs  discrete.rs  rate_limiter.rs  running_average.rs
src/graphics/: quad.rs  rect.rs  scene.rs  sprite.rs  texture.rs  view.rs
src/graphics/color/: mod.rs  monochrome.rs  rgb.rs  rgba.rs  traits.rs
src/graphics/image/: gen.rs  grayscale.rs  mod.rs  rgb.rs  rgba.rs
src/life/: cell.rs  image_grid.rs  quad.rs  world.rs
src/life/quad/: partial.rs
